# calibrate_accelerometer

./: CMakeLists.txt  README.md
data/anker/1/: calibr_output.yaml  imu_file.cvs  odometer_file.cvs  optical_flow_file.cvs
data/anker/2/: acc_calibr.yaml  imu_file.cvs  odometer_file.cvs  optical_flow_file.cvs
src/: main.cpp
src/anker/: readAnkerDataFile.cpp  readAnkerDataFile.h
src/calibrAcc/: calibrAcc.cpp  calibrAcc.hpp  gravityNormFactor.cpp  gravityNormFactor.h
